# TravelChat

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/chats/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/chats/migrations/: 0001_initial.py  0002_chatroommember_last_read_message.py  0003_alter_chatroom_room_type.py
backend/core/: asgi.py  models.py  settings.py  urls.py
backend/members/: admin.py  emails.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/members/migrations/: 0001_initial.py  0002_alter_user_options_user_created_at_user_deleted_at_and_more.py  0003_user_phone_user_updated_at.py  0004_remove_user_created_at_remove_user_last_login_time_and_more.py
backend/tests/: conftest.py  settings.py  test_soft_delete.py
backend/tests/chats/: test_api.py  test_group_chat_api.py  test_models.py  test_services.py  test_websocket.py
backend/tests/members/: test_admin_panel.py  test_admin_set_active.py  test_admin_visibility.py  test_auth_api.py  test_bcrypt_hash.py  test_change_password_api.py  test_email_verification.py  test_jwt_settings.py  test_login_throttle.py  test_logout_api.py  test_password_reset.py  test_profile_api.py  test_user_fields.py  test_user_search_api.py  test_validators.py
frontend/: .env.example  README.md  STYLE_SPEC.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: MessageBubble.tsx  NewDirectChatModal.tsx  UnreadBadge.tsx
frontend/src/layouts/: AppShell.tsx
frontend/tests/: router.test.tsx
(+27 files in other folders)
